--- a/src/main/resources/languages/de-DE.xml
+++ b/src/main/resources/languages/de-DE.xml
@@ -13,6 +13,7 @@
     <item name="paragraph_overview_sent">:white_check_mark: :calling: Ich habe dir eine Übersicht per DM geschickt.</item>
     <item name="paragraph_who_has_mightiest">Wer hat den prächtigsten Hahn?</item>
     <item name="paragraph_cock_result">%mention%'s Hahn (%length% cm): </item>
+    <item name="paragraph_member_picked">:game_die::white_check_mark: Das Schicksal hat entschieden: %mention% wurde ausgewählt :clap:</item>
 
     <item name="audio_now_playing">:notes: Aktuelle Sendung :notes:</item>
     <item name="audio_channel">Sender</item>
